--- a/passenger.conf
+++ b/passenger.conf
@@ -5,5 +5,5 @@
 ### End automatically installed Phusion Passenger config snippet ###
 
 PassengerUserSwitching on
-PassengerUser redmine
-PassengerGroup redmine
+PassengerUser www-data
+PassengerGroup www-data
